added fuctions move li & delete li

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-6">
               <h6>Done</h6>
-              <ul class="done-list importantAndUrgent"></ul>
+              <ul class="done-list"></ul>
             </div>
           </div>
           <div class="row h-15">
@@ -63,7 +63,7 @@
             </div>
             <div class="col-6">
               <h6>Done</h6>
-              <ul class="done-list importantAndNotUrgent"></ul>
+              <ul class="done-list"></ul>
             </div>
           </div>
           <div class="row h-15">
@@ -101,7 +101,7 @@
             </div>
             <div class="col-6">
               <h6>Done</h6>
-              <ul class="done-list notImportantAndUrgent"></ul>
+              <ul class="done-list"></ul>
             </div>
           </div>
           <div class="row h-15">
@@ -137,7 +137,7 @@
             </div>
             <div class="col-6">
               <h6>Done</h6>
-              <ul class="done-list notImportantAndNotUrgent"></ul>
+              <ul class="done-list"></ul>
             </div>
           </div>
           <div class="row h-15">
